added text description and fixed few bug

--- a/app/views/admins/_dashboard.html.erb
+++ b/app/views/admins/_dashboard.html.erb
@@ -15,6 +15,9 @@
             <li class="list-group-item bg-transparent px-0">
              <i class="fas fa-sticky-note text-primary"></i> <%=link_to "Edition de catalogues", admins_catalogues_path, class: 'text-default' %>
             </li>
+            <li class="list-group-item bg-transparent px-0">
+            <i class="fas fa-sticky-note text-primary"></i> <%=link_to "Edition des textes", admins_texts_path, class: 'text-default' %>
+            </li>
         </ul>
     </div>
 </div>
