--- a/app/views/admins/articles/index.html.erb
+++ b/app/views/admins/articles/index.html.erb
@@ -23,8 +23,8 @@
 							<li><p><%= article.category %></p></li>
 						</ul>
 						<div class=" text-center">		 
-							<%= link_to "Éditer", edit_admins_article_path(article.id), class:"btn btn-info" %> 
-							<%= link_to "Supprimer", admins_article_path(article.id), method: 'delete',class:"btn btn-danger" %>
+							<%= link_to "Éditer", edit_admins_article_path(article.id), class:"btn my-btn btn-info" %> 
+							<%= link_to "Supprimer", admins_article_path(article.id), method: 'delete',class:"btn my-btn btn-danger" %>
 						</div>
 					</div>
 				</div>
