--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container margin-footer" style="background-color: initial;">
 	<div class="container-fluid pl-5 pr-5">
-	<p class="description mt-5 mb-5" style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Fames ac turpis egestas integer eget. Eu sem integer vitae justo eget magna fermentum iaculis. Molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit. Sed libero enim sed faucibus turpis in eu mi bibendum. Amet nisl suscipit adipiscing bibendum. Montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada. Facilisis magna etiam tempor orci eu lobortis elementum nibh tellus. Blandit libero volutpat sed cras ornare arcu dui vivamus. Neque ornare aenean euismod elementum. Ornare arcu dui vivamus arcu felis bibendum ut tristique.</p></div>
+	<p class="description mt-5 mb-5" style="text-align: justify;"><%= @text.description %></p></div>
 	<% @articles.each do |article| %>
 		<div class="row">
 			<div class="col col-12">
