--- a/app/views/admins/catalogues/show.html.erb
+++ b/app/views/admins/catalogues/show.html.erb
@@ -14,6 +14,8 @@
 			<%= form_tag url_for(action: 'update'), method: "patch", class: "mt-4" do %>
 				<%= label_tag 'Quel sera son nom ? ', nil, class: "font-weight-bold" %>
                 <%= text_field_tag 'name', @catalogue.name, class: "form-control" %>
+                  <%= label_tag 'description', nil, class: 'font-weight-bold mb-3' %>
+				<%= text_area_tag 'description', @catalogue.description, class: "form-control mb-3" %>
 				<%= submit_tag "Éditer le nom", class: "btn btn-primary mb-3 mt-3" %>
   			<%end %>
 		</div>
