--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,34 +10,24 @@
     <div class="collapse navbar-collapse active" id="navbarColor01">
         <ul class="navbar-nav mr-auto mx-auto">
             <li class="nav-item">
-                <%= link_to "Expo", categories_path, class: "nav-link" %>
+                <%= link_to "Perso", categories_path, class: "nav-link" %>
             </li>            
 
             <li class="nav-item">
-                <%= link_to "Catalogue", catalogues_path, class: "nav-link" %>
+                <%= link_to "Galerie", catalogues_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
                 <%= link_to "Cours & Ateliers", articles_path, class: "nav-link" %>
             </li>   
              
-            <li class="dropdown nav-item"> 
-                <a class="dropdown-toggle nav-link"  href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span>À propos </span>
-                </a>       
-  
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <li><%= link_to "Qui suis-je ?", static_pages_about_me_path, class: "dropdown-item" %>
-                    </li>
-                    <li><%= link_to "Actualités", '#', class: "dropdown-item" %>
-                    </li>
-                </ul>
-            </li>
+            <li class=" nav-item">
+                <%= link_to "Présentation", static_pages_about_me_path, class: "nav-link" %>
+            </li>      
 
             <% if user_signed_in? && current_user.id_admin == true %>
                   <li class="nav-item">
                       <%= link_to "Admin", admins_root_path, class: "nav-link" %>
-                  </li>
-                  
+                  </li>    
             <% end %>
 
             <% if user_signed_in? %>
