--- a/app/views/admins/catalogues/new.html.erb
+++ b/app/views/admins/catalogues/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid margin-footer">
-    <h1 class="text-center mt-5 mb-5"> Créer un nouveau catalogue </h1>
+    <h1 class="text-center mt-5 mb-5"> Créer une nouvelle galerie </h1>
     <div class="row align-items-center">
         <div class="col col-sm-8 col-md-8 col-lg-6 text-center mx-auto">
             <%= form_tag url_for(action: 'create'), method: "post", class: "mt-4" do %>  
