--- a/app/views/admins/_dashboard.html.erb
+++ b/app/views/admins/_dashboard.html.erb
@@ -10,10 +10,10 @@
              <i class="fas fa-sticky-note text-primary"></i> <%=link_to "Edition d'articles", admins_articles_path, class: 'text-default' %>
             </li>
             <li class="list-group-item bg-transparent px-0">
-             <i class="fas fa-sticky-note text-primary"></i> <%=link_to "Edition de catégories", admins_categories_path, class: 'text-default' %>
+             <i class="fas fa-sticky-note text-primary"></i> <%=link_to "Edition de perso", admins_categories_path, class: 'text-default' %>
             </li>
             <li class="list-group-item bg-transparent px-0">
-             <i class="fas fa-sticky-note text-primary"></i> <%=link_to "Edition de catalogues", admins_catalogues_path, class: 'text-default' %>
+             <i class="fas fa-sticky-note text-primary"></i> <%=link_to "Edition de galerie", admins_catalogues_path, class: 'text-default' %>
             </li>
             <li class="list-group-item bg-transparent px-0">
             <i class="fas fa-sticky-note text-primary"></i> <%=link_to "Edition des textes", admins_texts_path, class: 'text-default' %>
