--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid margin-footer">
     
-    <h1 class="text-center mt-5 mb-5"> Créer une nouvelle catégorie </h1>
+    <h1 class="text-center mt-5 mb-5"> Créer une nouvelle catégorie perso </h1>
     
     <!-- <div class="container"> -->
         <div class="row align-items-center">
