--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,21 +1,15 @@
 <!-- Footer -->
-
+ <% if false %>
 <footer class="mt-5">
-
-		<div id="container-footer" class="container-fluid mb-2">
-			<div class="row mt-2">
-
-				<div class="col col-12 text-dark text-center">
-					<i class="fab fa-twitter-square"></i>
-					<i class="fab fa-facebook ml-4"></i>
-					<i class="fab fa-instagram ml-4"></i>
-					<i class="fab fa-pinterest-square ml-4"></i>
-				</div>
-
+	<div id="container-footer" class="container-fluid ">
+		<div class="row mt-2">
+			<div class="col col-12 text-dark text-center">
+				<i class="fab fa-facebook ml-4"></i>
+				<i class="fab fa-instagram ml-4"></i>
 			</div>
-		</diçv>
+		</div>
 
-		<div class="row bottom-footer " style="border-top: 1px solid white;">
+		<div class="row bottom-footer " >
 			<div class="col col-12 "> 
 				<p class="text-center mt-3 mail">noemieblumet@gmail.com</p>
 			</div>
@@ -23,4 +17,24 @@
 				<p class="text-center">06.25.27.86.05</p>
 			</div>
 		</div>
+	</div>
+</footer>
+
+<% end %>
+
+<footer class="mt-5" %>
+	<div class="container-fluid ">
+		<div class="row mt-2">
+			<div class="col col-4 text-dark text-center" style="padding-top: 45px;">
+				<i class="fab fa-facebook ml-4"></i>
+				<i class="fab fa-instagram ml-4"></i>
+			</div>
+			<div class="col col-4">
+				<p class="text-center mail" style="padding-top: 40px;">noemieblumet@gmail.com</p>
+			</div>
+			<div class="col col-4">
+				<p class="text-center" style="padding-top: 40px;">06.25.27.86.05</p>
+			</div>	
+		</div>
+	</div>
 </footer>
