--- a/app/views/catalogues/index.html.erb
+++ b/app/views/catalogues/index.html.erb
@@ -1,7 +1,7 @@
 
 
 <!-- expo + modals -->
-<div class="container mb-5">   
+<div class="container mb-5 pb-5 pt-5">   
     <div class="row mb-5 pb-5 ">
         <div class="col col-12">
             <% @catalogues.each do |cat| %>
