--- a/app/views/catalogues/index.html.erb
+++ b/app/views/catalogues/index.html.erb
@@ -1,4 +1,12 @@
+<!-- Description de l'expo  -->
 
+<div class="container">
+    <div class="row">
+        <div class="col col-12">
+            <p class="mt-5 mb-5 mx-auto"><%= @text.description %></p>
+        </div>
+    </div>
+</div>
 
 <!-- expo + modals -->
 <div class="container mb-5 pb-5 pt-5">   
