--- a/app/views/admins/articles/edit.html.erb
+++ b/app/views/admins/articles/edit.html.erb
@@ -1,6 +1,18 @@
  <!-- Form zone  -->
 <div class="container-fluid margin-footer">
     <h1 class="text-center mt-5"> Édition d'article </h1>
+<div class="row">
+
+    <div class="col col-9">
+      
+      <%= form_tag article_images_article_index_path(@article), multipart: true do %>
+        <%= file_field_tag 'images_article[]', :multiple => true %>
+        <%= hidden_field_tag :article, @article.id  , params[:article] || {} %>
+        <button type="button" ><%= submit_tag "upload" %></button>
+      <% end %>     
+    </div>
+
+    </div>
     <div class="row">
         <div class="col col-6 my-form mx-auto">
             <%= form_tag url_for(action: 'update'), method: "patch", class: "mt-4" do %>
@@ -33,6 +45,15 @@
                     <%= submit_tag "Editer", class: "btn btn-primary mb-3 my-btn" %>
                 </div>
             <% end %> 
+            <div class="row">
+                <% @article.images_article.each do |image| %>
+                    <div class="col-2 mt-5 ml-5 mr-5">
+                        <%= image_tag((image),  class:"mt-2 ml-2 fit") %>
+                        <%= link_to "X", article_delete_image_attachment_path(@article.id, image.id), method: "delete", data: {confirm: "are you sure ?"} %>
+                    </div>
+                <% end %>
+          </div>
+
         </div>
     </div>
 </div>
