--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,6 +7,11 @@
 				<div id="card" class="card card-shadow mt-3 ml-5 mr-5 mb-5">
 					<div class="card-body card-body-article">
 						<b><h3 class="card-title text-center mt-3 mb-3"> <%= article.title %> </h3></b>
+						<% article.images_article.each do |image| %>
+							<div class="col col-3 mb-3">
+								<%= image_tag(image, class:" article_image") %>
+							</div>
+						<% end %>
 						<p class="card-text"> <%= article.body %> </p>
 						<div id="" class=" my-btn-article btn btn-sm btn-outline-primary click mb-3">En savoir plus</div>
 
@@ -17,7 +22,10 @@
 							<li><p class="card-text">Matériel logistique : <%= article.equipment %> </p></li>
 							<li><p class="card-text"> Durée : <%= article.duration %> </p></li>
 							<li><p class="card-text">Tarif : <%= article.price %> </p></li>
+
 						</ul>
+						
+
 						</div>				
 					</div>
 				</div>
