--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -444,3 +444,22 @@ footer {
 
  }
 
+
+
+/*  MANSONRY TEST */
+
+
+.mansonry {
+  column-count: 4;
+  margin: 1.5em auto;
+  column-gap: 1.5em;
+}
+
+.mansonry-item {
+  background-color: #eee;
+  display: inline-block;
+  margin: 0 0 1em;
+  width: 100%;
+}
+
+
