ok duration and price, galery masonry

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
         <div class="col col-12">
-            <p class="mt-5 mb-5 mx-auto"><%= @text.find_by(name: "perso").description %></p>
+            <p class="mt-5 mb-5 mx-auto"><%= @text.description %></p>
         </div>
     </div>
 </div>
