--- a/app/views/static_pages/about_me.html.erb
+++ b/app/views/static_pages/about_me.html.erb
@@ -24,6 +24,10 @@
 					<div class="card mt-3 ml-5 mr-5 mb-5">
 						<div class="card-body">
 							<b><h3 class="card-title text-center mt-3 mb-3"> <%= article.title %> </h3></b>
+							<% article.images_article.each do |image| %>
+								<%= image_tag(image, class:" article_image") %>
+							<% end %>
+
 							<p class="card-text"> <%= article.body %> </p>			
 						</div>
 					</div>
