--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -2,7 +2,7 @@
 
 
   <!-- Website activity -->
-                <div class="container">
+                <div class="container margin-footer">
                     <div class="row mt-4">
                         <div class="col-6">
                             <h4 class="bg-primary-alt"><i class="fas fa-info-circle text-primary"></i> Activité du site</h4>
